# Moonfit

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Thumbs.db  azure-pipelines.yml  expThymus.cpp  expThymus.h  modelsStructABC.cpp  modelsStructABC.h  setup.py.in
Elfaki2020/: Balthyse.pro  CMakeLists.txt  How to reproduce this work.docx  expThymus.h  mainThymus.cpp  modelsStructABC.cpp  modelsStructABC.h
Elfaki2020/DATA/ConfigsWithBestParamSets/: NoDP_StrA_Hyp3.txt  NoDP_StrA_Hyp4.txt  NoDP_StrB_Hyp4.txt  NoDP_StrC_Hyp4.txt  StructureAHyp1.txt  StructureAHyp2.txt  StructureAHyp3.txt  StructureAHyp4.txt  StructureBHyp1.txt  StructureBHyp2.txt  StructureBHyp3.txt  StructureBHyp4.txt  StructureCHyp1.txt  StructureCHyp2.txt  StructureCHyp3.txt  StructureCHyp4.txt
Elfaki2020/Resltsscript21-1-2021at1-44-8/CombNr0-21-1-2021at1-44-8/: Optimizer.txt
Elfaki2020/Resltsscript21-1-2021at15-2-57/CombNr0-21-1-2021at15-2-57/: CostEvolutionDuringOptimization.txtCombNr0-21-1-2021at15-2-57  FitnessBestSetOfCombNr0-21-1-2021at15-2-57.txt  History.txt
Elfaki2020/Resltsscript21-1-2021at15-2-57/CombNr1-21-1-2021at15-36-5/: CostEvolutionDuringOptimization.txtCombNr1-21-1-2021at15-36-5  FitnessBestSetOfCombNr1-21-1-2021at15-36-5.txt  History.txt  Optimizer.txt
Elfaki2020/Resltsscript21-1-2021at15-2-57/CombNr2-21-1-2021at16-10-30/: Optimizer.txt
Moonfit/: .directory  CMakeLists.txt  Doxyfile  Todos.doc  common.cpp  common.h  moonfit.pri
Moonfit/Docs/html/: annotated.html  choose_8cpp.html  choose_8h.html  choose_8h_source.html  class_compare_sets-members.html  class_compare_sets.html  class_generate-members.html  class_generate.html  class_graphe2-members.html  class_graphe2.html  class_optimizer-members.html  class_optimizer.html  class_play-members.html  class_play.html  class_starter-members.html  class_starter.html  classchoose-members.html  classchoose.html  classes.html  classgraphe_custom-members.html  classgraphe_custom.html  classmanage_sims-members.html  classmanage_sims.html  classmy_sim-members.html  classmy_sim.html  classopt_select-members.html  classopt_select.html  classsimu_win-members.html  classsimu_win.html  classtk_1_1band__matrix-members.html  classtk_1_1band__matrix.html  classtk_1_1spline-members.html  classtk_1_1spline.html  dir_b7263c2df3abed61e1897d5e9e534860.html  dir_bcbb2cf9a3d3d83e5515c82071a07177.html  doxygen.css  evaluator_8cpp.html  evaluator_8h.html  evaluator_8h_source.html  experiment_8cpp.html  (+147 more)
Moonfit/Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.html  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.html  (+109 more)
Moonfit/Docs/latex/: annotated.tex  choose_8cpp.tex  choose_8h.tex  class_compare_sets.tex  class_generate.tex  class_graphe2.eps  class_graphe2.tex  class_optimizer.eps  class_optimizer.tex  class_play.eps  class_play.tex  class_starter.eps  class_starter.tex  classchoose.eps  classchoose.tex  classgraphe_custom.eps  classgraphe_custom.tex  classmanage_sims.eps  classmanage_sims.tex  classmy_sim.tex  classopt_select.eps  classopt_select.tex  classsimu_win.eps  classsimu_win.tex  classtk_1_1band__matrix.tex  classtk_1_1spline.tex  dir_b7263c2df3abed61e1897d5e9e534860.tex  dir_bcbb2cf9a3d3d83e5515c82071a07177.tex  doxygen.sty  evaluator_8cpp.tex  evaluator_8h.tex  experiment_8cpp.tex  experiment_8h.tex  files.tex  generate_8cpp.tex  generate_8h.tex  graphe2_01-_01_copy_8cpp.tex  graphe2_01-_01_copy_8h.tex  graphe2_8cpp.tex  graphe2_8h.tex  (+61 more)
Moonfit/Extreminator/: CMakeLists.txt  baseProblem.h  fitteInterface.cpp  mainExtreminator.cpp
Moonfit/Extreminator/common/: CMakeLists.txt  myFiles.cc  myRandom.cc  myRandom.h  myTimes.cc  myTimes.h  statistiques.h
Moonfit/Extreminator/include/: libmatlbm.mlib
Moonfit/Extreminator/optimizers/: CMAES.cc  CMAES.h  CMakeLists.txt  Config.cc  Genetic.cc  GeneticGeneral.cc  GradientDescent.h  MultipleGradientDescent.h  Orthogonalise.cc  Orthogonalise.h  SRES.cc  SRES.h  baseOptimizer.cc  baseOptimizer.h  individual.cc  individual.h  population.h  scalingFunctions.cc  scalingFunctions.h  simulatedAnnealing.cc
Moonfit/Extreminator/optimizers/SRES/: CMakeLists.txt  (+6 more)
Moonfit/Framework/: CMakeLists.txt  FrameworkOnly.pro  evaluator.cpp  evaluator.h  experiment.cpp  experiment.h  generate.cpp  generate.h  modele.cpp  modele.h  overrider.cpp  overrider.h  parameterSets.cpp  parameterSets.h  spline.cpp  spline.h  tableCourse.cpp  tableCourse.h
Moonfit/Interface/: .directory  choose.cpp  choose.h  choose.ui  graphe2 - Copy.cpp  graphe2 - Copy.h  graphe2.cpp  graphe2.h  graphe2.ui  grapheCustom.cpp  grapheCustom.h  optselect.cpp  optselect.h  play.cpp  play.h  play.ui  simuwin.cpp  simuwin.cpp.qC4244  simuwin.cpp.xS3724  simuwin.h  simuwin.ui  starterOld.cpp  starterOld.h
Moonfit/Interface/QCustomPlot/: qcustomplot.cpp  qcustomplot1.cpp
Moonfit/Interface/qwt6.1.0/: qwt_abstract_legend.h  qwt_abstract_scale.cpp  qwt_abstract_scale.h  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_analog_clock.cpp  qwt_analog_clock.h  qwt_arrow_button.cpp  qwt_arrow_button.h  qwt_clipper.cpp  qwt_clipper.h  qwt_color_map.cpp  qwt_color_map.h  qwt_column_symbol.cpp  qwt_column_symbol.h  qwt_compass.cpp  qwt_compass.h  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_counter.cpp  qwt_counter.h  qwt_curve_fitter.cpp  qwt_curve_fitter.h  qwt_date.cpp  qwt_date.h  qwt_date_scale_draw.cpp  qwt_date_scale_draw.h  qwt_date_scale_engine.cpp  qwt_date_scale_engine.h  qwt_dial.cpp  qwt_dial.h  qwt_dial_needle.cpp  qwt_dial_needle.h  qwt_dyngrid_layout.cpp  qwt_dyngrid_layout.h  qwt_event_pattern.cpp  qwt_event_pattern.h  qwt_graphic.cpp  (+148 more)
test/: BuildTheExampleModels.cpp  CMakeLists.txt
(+140 files in other folders)
